[gd_scene load_steps=16 format=3 uid="uid://cqjsmgq438py"]

[ext_resource type="Script" path="res://src/core/RootScene.gd" id="1_n7fwb"]
[ext_resource type="PackedScene" uid="uid://duppseykdo0cy" path="res://src/game_management/TimeController.tscn" id="1_n223u"]
[ext_resource type="PackedScene" uid="uid://cslpginlt0h0s" path="res://src/ui/EndScreen.tscn" id="2_cqdib"]
[ext_resource type="PackedScene" uid="uid://sv6gi2mgs0b7" path="res://src/game_management/LevelManager.tscn" id="4_4wkn0"]
[ext_resource type="Script" path="res://src/PlayerHUD.gd" id="4_i2xps"]
[ext_resource type="Script" path="res://src/core/TimeCounter.gd" id="4_s8cbv"]
[ext_resource type="Script" path="res://src/core/TimeBar.gd" id="5_l6w0t"]
[ext_resource type="PackedScene" uid="uid://bkivt3oilbpka" path="res://src/sound/BackgroundMusic.tscn" id="7_27b7c"]

[sub_resource type="Gradient" id="Gradient_nd1td"]
colors = PackedColorArray(0.745098, 0.313726, 0.0313726, 1, 0.882353, 0.611765, 0.0588235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ok24e"]
gradient = SubResource("Gradient_nd1td")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ksvjo"]
texture = SubResource("GradientTexture1D_ok24e")

[sub_resource type="SystemFont" id="SystemFont_nnir8"]

[sub_resource type="Gradient" id="Gradient_rob7v"]
colors = PackedColorArray(0, 0.666667, 0.803922, 1, 0.235294, 0.392157, 0.678431, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qbai8"]
gradient = SubResource("Gradient_rob7v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mcjdn"]
texture = SubResource("GradientTexture1D_qbai8")

[node name="RootScene" type="Node2D"]
script = ExtResource("1_n7fwb")

[node name="EndScreen" parent="." instance=ExtResource("2_cqdib")]
visible = false

[node name="MusicController" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeController" parent="." instance=ExtResource("1_n223u")]

[node name="LevelManager" parent="." instance=ExtResource("4_4wkn0")]
scale = Vector2(1.6631, 1.663)

[node name="HostHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_i2xps")

[node name="TimeCounter" type="Label" parent="HostHUD"]
z_index = 10
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "180.0
"
script = ExtResource("4_s8cbv")

[node name="TimeBar" type="ProgressBar" parent="HostHUD"]
z_index = 9
layout_mode = 0
offset_right = 960.0
offset_bottom = 60.0
theme_override_styles/fill = SubResource("StyleBoxTexture_ksvjo")
max_value = 180.0
value = 180.0
show_percentage = false
script = ExtResource("5_l6w0t")

[node name="PlayerName" type="Label" parent="HostHUD"]
z_index = 3
layout_mode = 0
offset_left = 13.0
offset_top = 63.0
offset_right = 576.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 30

[node name="GuestHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_i2xps")

[node name="TimeCounter" type="Label" parent="GuestHUD"]
z_index = 10
layout_mode = 0
offset_left = 1838.0
offset_top = 8.0
offset_right = 1920.0
offset_bottom = 60.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_nnir8")
theme_override_font_sizes/font_size = 30
text = "180.0"
script = ExtResource("4_s8cbv")

[node name="TimeBar" type="ProgressBar" parent="GuestHUD"]
z_index = 9
layout_mode = 0
offset_left = 960.0
offset_right = 1920.0
offset_bottom = 60.0
theme_override_styles/fill = SubResource("StyleBoxTexture_mcjdn")
max_value = 180.0
value = 180.0
fill_mode = 1
show_percentage = false
script = ExtResource("5_l6w0t")

[node name="PlayerName" type="Label" parent="GuestHUD"]
z_index = 3
layout_mode = 0
offset_left = 1344.0
offset_top = 64.0
offset_right = 1912.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Background_music" parent="." instance=ExtResource("7_27b7c")]
